fix color contrast

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,13 +1,15 @@
 [data-theme='dark'] {
     header {
-        background: url('../images/bg-mobile-dark.jpg');
+        background-color: hsl(0, 0%, 0%);
+        background-image: url('../images/bg-mobile-dark.jpg');
         background-size: 100% 100%;
     }
 }
 
 [data-theme='light'] {
     header {
-        background: url('../images/bg-mobile-light.jpg');
+        background-color: hsl(0, 0%, 0%);
+        background-image: url('../images/bg-mobile-light.jpg');
         background-size: 100% 100%;
     }
 }
@@ -39,14 +41,16 @@ header {
 @media screen and (min-width: 600px) {
     [data-theme='dark'] {
         header {
-            background: url('../images/bg-desktop-dark.jpg');
+            background-color: hsl(0, 0%, 0%);
+            background-image: url('../images/bg-desktop-dark.jpg');
             background-size: 100% 100%;
         }
     }
 
     [data-theme='light'] {
         header {
-            background: url('../images/bg-desktop-light.jpg');
+            background-color: hsl(0, 0%, 0%);
+            background-image: url('../images/bg-desktop-light.jpg');
             background-size: 100% 100%;
         }
     }    
