--- a/style/general.css
+++ b/style/general.css
@@ -3,24 +3,28 @@
   --bg-primary: hsl(235, 24%, 19%);
   --bg-secondary: hsl(235, 21%, 11%);
   --text-primary: hsl(236, 33%, 92%);
-  --text-secondary: hsl(234, 11%, 52%);
-  --text-tertiary: hsl(234, 11%, 52%);
+  --text-secondary: hsl(232, 11%, 59%);
+  --text-tertiary: hsl(232, 11%, 59%);
   --border-color: hsl(237, 14%, 26%);
   --hover-primary: hsl(236, 33%, 92%);
   --focus-primary: hsl(233, 11%, 84%);
   --input-border: hsl(233, 14%, 35%);
+  --text-checked: hsl(233, 14%, 35%);
+  --blue: hsl(220, 98%, 66%);
 }
 
 [data-theme=light] {
   --bg-primary: hsl(0, 0%, 98%);
   --bg-secondary: hsl(236, 33%, 92%);
   --text-primary: hsl(237, 14%, 26%);
-  --text-secondary: hsl(252, 3%, 68%);
-  --text-tertiary: hsl(240, 5%, 60%);
+  --text-secondary: hsl(257, 3%, 46%);
+  --text-tertiary: hsl(240, 5%, 46%);
   --border-color: hsl(234, 39%, 85%);
   --hover-primary: hsl(237, 14%, 26%);
   --focus-primary: hsl(235, 24%, 19%);
   --input-border: hsl(233, 11%, 84%);
+  --text-checked: hsl(252, 11%, 91%);
+  --blue: hsl(220, 98%, 55%);
 }
 
 *, *::before, *::after {
@@ -132,12 +136,14 @@ li:active {
 }
 
 [data-theme=dark] header {
-  background: url("../images/bg-mobile-dark.jpg");
+  background-color: hsl(0, 0%, 0%);
+  background-image: url("../images/bg-mobile-dark.jpg");
   background-size: 100% 100%;
 }
 
 [data-theme=light] header {
-  background: url("../images/bg-mobile-light.jpg");
+  background-color: hsl(0, 0%, 0%);
+  background-image: url("../images/bg-mobile-light.jpg");
   background-size: 100% 100%;
 }
 
@@ -164,11 +170,13 @@ header button {
 
 @media screen and (min-width: 600px) {
   [data-theme=dark] header {
-    background: url("../images/bg-desktop-dark.jpg");
+    background-color: hsl(0, 0%, 0%);
+    background-image: url("../images/bg-desktop-dark.jpg");
     background-size: 100% 100%;
   }
   [data-theme=light] header {
-    background: url("../images/bg-desktop-light.jpg");
+    background-color: hsl(0, 0%, 0%);
+    background-image: url("../images/bg-desktop-light.jpg");
     background-size: 100% 100%;
   }
   header {
@@ -274,7 +282,7 @@ form .task-input-decorative-circle {
 }
 .tasks-buttons-wrapper li input:checked + label {
   text-decoration: line-through;
-  color: hsl(233, 14%, 35%);
+  color: var(--text-checked);
 }
 .tasks-buttons-wrapper li label {
   width: 100%;
@@ -326,7 +334,7 @@ fieldset legend {
   display: none;
 }
 fieldset input:checked + label {
-  color: hsl(220, 98%, 61%);
+  color: var(--blue);
 }
 fieldset input:focus-visible + label {
   outline: 2px solid var(--focus-primary);
